fix: show correctly on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,7 @@
 .postList {
   display: flex;
   flex-direction: row;
+  flex-flow: row wrap;
 }
 
 .postList > * {
