--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -8,8 +8,6 @@
   flex: 1;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
   font-size: 30px;
   color: rgb(80, 57, 96);
 }
@@ -39,4 +37,15 @@
 
 .borderCircle {
   border-radius: 9999px;
+}
+
+@media screen and (max-width: 800px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .main > * {
+    width: 100%;
+  }
 }
